crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_defs__remove_metadata-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_defs.rs
expression: "test_config(r#\"{ \"removeUselessDefs\": true }\"#,\nSome(r#\"<svg>\n    <linearGradient id=\"linear\">\n        <stop/>\n        <stop/>\n    </linearGradient>\n    <radialGradient id=\"radial\">\n        <stop/>\n        <stop/>\n    </radialGradient>\n    <pattern id=\"pattern\">\n        <rect/>\n    </pattern>\n    <clipPath id=\"clip\">\n        <path/>\n    </clipPath>\n    <mask id=\"mask\">\n        <rect/>\n    </mask>\n    <marker id=\"marker\">\n        <path/>\n    </marker>\n    <symbol id=\"symbol\">\n        <rect/>\n    </symbol>\n    <solidColor id=\"color\"/>\n</svg>\"#),)?"
---
<svg>
    <linearGradient id="linear">
        <stop/>
        <stop/>
    </linearGradient>
    <radialGradient id="radial">
        <stop/>
        <stop/>
    </radialGradient>
    <pattern id="pattern">
        <rect/>
    </pattern>
    <clipPath id="clip">
        <path/>
    </clipPath>
    <mask id="mask">
        <rect/>
    </mask>
    <marker id="marker">
        <path/>
    </marker>
    <symbol id="symbol">
        <rect/>
    </symbol>
    <solidColor id="color"/>
</svg>
