crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_defs__remove_metadata-5.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_defs.rs
expression: "test_config(r#\"{ \"removeUselessDefs\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <rect fill=\"url(#a)\" width=\"64\" height=\"64\"/>\n    <g>\n        <linearGradient id=\"a\">\n            <stop offset=\"5%\" stop-color=\"gold\" />\n        </linearGradient>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <rect fill="url(#a)" width="64" height="64"></rect>
    <g>
        <linearGradient id="a">
            <stop offset="5%" stop-color="gold"></stop>
        </linearGradient>
    </g>
</svg>
